Implement local storage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Example</title>
+    <title>Spiral Examples</title>
   </head>
   <body>
     <script type="text/javascript" src="./target/scala-2.11/spiral-jsdeps.js"></script>
